infra/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: renewableops
  namespace: renewableops-app
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "5m"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts: ["renewableops.local"]
      secretName: renewableops-tls
  rules:
    - host: renewableops.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: renewableops-api
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: renewableops-dashboard
                port:
                  name: http
